[metadata]
name = molecule_custom_docker
description = Molecule Custom Docker Plugin :: run molecule tests on Docker images
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
 
    Topic :: System :: Systems Administration
    Topic :: Utilities
 
keywords =
    ansible
    roles
    testing
    molecule
    plugin
    docker
 
[options]
use_scm_version = True
python_requires = >=3.10
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False
 
install_requires =
   molecule >= 5.0.1
 
[options.extras_require]
dev = 
    flake8
    isort

[options.entry_points]
molecule.driver =
   custom_docker = molecule_custom_docker.driver:CustomDocker
 
[options.packages.find]
where = src

[flake8]
exclude = .git,__pycache__,venv